"Agregando Auth con google, endpoint de reserva de servicios, manejo de fallecidos y roles/permisos para los usuarios"